--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>0. Assume good intentions first</h2>
 
     <h2>1. Feel free to email the list with lots of information</h2>
-    <p>I've seen people often note that there's not always enough information about everything everyone is doing on the list. Things like 'I'm planning on maybe hacking on x' is perfectly valid and useful information if some detail is given.</p>
+    <p>I've seen people often note that there's not always enough information about everything everyone is doing on the list. Things like &ldquo;I'm planning on maybe hacking on x&rdquo; are perfectly valid and useful information if some detail is given.</p>
 
     <h2>2. Don't ask people to read the IRC logs</h2>
     <p>The IRC logs are not for allowing people to find out what happened on IRC to fuel the community, they're for protecting us with our online interactions with students.</p>
@@ -25,7 +25,7 @@
     <p>If your repo is in maintainer mode, let people know how to get patches to you, if you merge their patches let them know via email you've done so, as they may not get notified simply by you making a commit.</p>
 
     <h2>5. Don't be a dick</h2>
-    <p>Ad hominem attacks will not help, especially with new people. Don't criticise people to death, try to be constructive in your criticism if you can. Alternatively: <a href="http://en.wikipedia.org/wiki/Wikipedia:Please_be_a_giant_dick,_so_we_can_ban_you">please be a giant dick so we can ban you</a></p>
+    <p>Ad hominem attacks will not help, especially with new people. Don't criticise people to death, try to be constructive in your criticism if you can. Alternatively: <a href="http://en.wikipedia.org/wiki/Wikipedia:Please_be_a_giant_dick,_so_we_can_ban_you">please be a giant dick so we can ban you</a>.</p>
     </div>
   </body>
 </html>
