--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <h2>0. Assume good intentions first</h2>
 
     <h2>1. Feel free to email the list with lots of information</h2>
-    <p>I've seen people often note that there's not always enough information about everything everyone is doing on the list. Things like &ldquo;I'm planning on maybe hacking on x&rdquo; are perfectly valid and useful information if some detail is given.</p>
+    <p>People often note that there's not always enough information about everything everyone is doing on the list. Things like &ldquo;I'm planning on maybe hacking on x&rdquo; are perfectly valid and useful information if some detail is given.</p>
 
     <h2>2. Don't ask people to read the IRC logs</h2>
     <p>The IRC logs are not for allowing people to find out what happened on IRC to fuel the community, they're for protecting us with our online interactions with students.</p>
 
     <h2>3. Don't let list discussions trail off</h2>
-    <p>Sometimes list discussions finish without any actual conclusion, mostly because someone has replied to an original poster and the original poster never actually gets back to them. Sometimes I think this might be because the original poster has been smacked down hard by an ultra nerd baller (read: has been shown to be wrong). Also this happens when people have other commitments: feel free to chase people a little, without harassing them.</p>
+    <p>Sometimes list discussions finish without any actual conclusion, mostly because someone has replied to an original poster and the original poster never actually gets back to them. Sometimes this might be because the original poster has been smacked down hard by an ultra nerd baller (read: has been shown to be wrong). Also this happens when people have other commitments: feel free to chase people a little, without harassing them.</p>
 
     <h2>4. Be a good maintainer</h2>
     <p>If your repo is in maintainer mode, let people know how to get patches to you, if you merge their patches let them know via email you've done so, as they may not get notified simply by you making a commit.</p>
