Change all unicode escape codes to their more human-legible equivalents
Something like &3462; becomes something like &bees;

--- a/newbie-guidelines.html
+++ b/newbie-guidelines.html
@@ -14,27 +14,28 @@
 <div id="content">
 <h2 id="fornewsrmembers">For New SR Members</h2>
 
-<p>Don&#8217;t run away just yet, we&#8217;re really nice people (and we&#8217;ll give you cake).</p>
+<p>Don&rsquo;t run away just yet, we&#8217;re really nice people (and we&rsquo;ll give you cake).</p>
 
 <ol>
-<li>Do ask if you need help, although it might be worth having a quick google first for the information. Also our wiki http://trac.studentrobotics.org contains an awful lot of information.</li>
-<li>If you&#8217;ve never used a revision control system before (or don&#8217;t even know what that means) please ask someone about git, we use it to store nearly everything we do.</li>
-<li>Don&#8217;t be scared to ask things.</li>
+<li>Do ask if you need help, although it might be worth having a quick google first for the information.  Our <a href="http://trac.studentrobotics.org">wiki</a> contains an awful lot of information.</li>
+<li>If you&rsquo;ve never used a revision control system before (or don&rsquo;t even know what that means) please ask someone about git, we use it to store nearly everything we do.</li>
+<li>Don&rsquo;t be scared to ask things.</li>
 <li>Fill the list with all your SR related thoughts, we love information.</li>
-<li>Don&#8217;t be afraid of looking silly. We&#8217;ve all done it within SR at one point.</li>
+<li>Don&rsquo;t be afraid of looking silly. We&rsquo;ve all done it within SR at one point.</li>
 </ol>
-
+</p>
 <h2 id="foroldsrmembers">For Old SR Members</h2>
 
-<p>Don&#8217;t bite the newbies, these people think we&#8217;re doing cool stuff, let&#8217;s not scare them away just yet.</p>
+<p>Don&rsquo;t bite the newbies, these people think we&rsquo;re doing cool stuff, let&rsquo;s not scare them away just yet.
 
 <ol>
-<li>Don&#8217;t use specialised terms unless you&#8217;re sure the Newbie is familiar with the term. Examples are &#8216;BOM&#8217;, &#8216;Gerbers&#8217;, &#8216;Geda&#8217; and &#8216;PWM&#8217; (depending on what background they come from). Do: ask them if they know what a &#8216;BOM&#8217; is and then if they don&#8217;t tell them.</li>
-<li>Don&#8217;t assume they know what they&#8217;re doing, <em>especially</em> if they say that they know what they&#8217;re doing. Do: check on their progress, help them get their progress to others using git.</li>
-<li>Don&#8217;t mercilessly critique their work in the same way you would the IDE, something Rob or Rich has made or jump in and change it for them. Do: try to be constructive in criticism, review things with them at the same time that they&#8217;re doing them.</li>
-<li>Don&#8217;t give them a task and then leave them on their own to do it. Do: walk through everything they need help with, face to face, for at least a few months. (yes Months).</li>
-<li>Don&#8217;t ask them to google it, link them to google, or send them to just fucking google it unless you&#8217;ve repeatedly beaten the thing that they&#8217;re trying to do a thousand times.</li>
+<li>Don&rsquo;t use specialised terms unless you&rsquo;re sure the Newbie is familiar with the term. Examples are &lsquo;BOM&rsquo;, &lsquo;Gerbers&rsquo;, &lsquo;Geda&rsquo; and &lsquo;PWM&rsquo; (depending on what background they come from). Do: ask them if they know what a &lsquo;BOM&rsquo; is and then if they don&rsquo;t tell them.</li>
+<li>Don&rsquo;t assume they know what they&rsquo;re doing, <em>especially</em> if they say that they know what they&rsquo;re doing. Do: check on their progress, help them get their progress to others using git.</li>
+<li>Don&rsquo;t mercilessly critique their work in the same way you would the IDE, something Rob or Rich has made or jump in and change it for them. Do: try to be constructive in criticism, review things with them at the same time that they&rsquo;re doing them.</li>
+<li>Don&rsquo;t give them a task and then leave them on their own to do it. Do: walk through everything they need help with, face to face, for at least a few months. (yes Months).</li>
+<li>Don&rsquo;t ask them to google it, link them to google, or send them to just fucking google it unless you&rsquo;ve repeatedly beaten the thing that they&rsquo;re trying to do a thousand times.</li>
 </ol>
+
 </div>
 </body>
 </html>
