--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <h2>1. Feel free to email the list with lots of information</h2>
     <p>People often note that there's not always enough information about everything everyone is doing on the list. Things like &ldquo;I'm planning on maybe hacking on x&rdquo; are perfectly valid and useful information if some detail is given.</p>
 
-    <h2>2. Don't ask people to read the IRC logs</h2>
-    <p>The IRC logs are not for allowing people to find out what happened on IRC to fuel the community, they're for protecting us with our online interactions with students.</p>
+    <h2>2. Don't ask people to read the IRC log</h2>
+    <p>The IRC log is not a text for storing information or announcements in.  It's for protecting us with our online interactions with students.</p>
 
     <h2>3. Don't let list discussions trail off</h2>
     <p>Sometimes list discussions finish without any actual conclusion, mostly because someone has replied to an original poster and the original poster never actually gets back to them. Sometimes this might be because the original poster has been smacked down hard by an ultra nerd baller (read: has been shown to be wrong). Also this happens when people have other commitments: feel free to chase people a little, without harassing them.</p>
