--- a/newbie-guidelines.html
+++ b/newbie-guidelines.html
@@ -29,7 +29,7 @@
 <p>Don&rsquo;t bite the newbies, these people think we&rsquo;re doing cool stuff, let&rsquo;s not scare them away just yet.
 
 <ol>
-<li>Don&rsquo;t use specialised terms unless you&rsquo;re sure the Newbie is familiar with the term. Examples are &lsquo;BOM&rsquo;, &lsquo;Gerbers&rsquo;, &lsquo;Geda&rsquo; and &lsquo;PWM&rsquo; (depending on what background they come from). Do: ask them if they know what a &lsquo;BOM&rsquo; is and then if they don&rsquo;t tell them.</li>
+<li>Don&rsquo;t use specialised terms unless you&rsquo;re sure the Newbie is familiar with the term. Examples are &lsquo;BOM&rsquo;, &lsquo;Gerbers&rsquo;, &lsquo;Geda&rsquo; and &lsquo;PWM&rsquo; (depending on what background they come from). Do: ask them if they know what a &lsquo;BOM&rsquo; is and then, if they don&rsquo;t, tell them.</li>
 <li>Don&rsquo;t assume they know what they&rsquo;re doing, <em>especially</em> if they say that they know what they&rsquo;re doing. Do: check on their progress, help them get their progress to others using git.</li>
 <li>Don&rsquo;t mercilessly critique their work in the same way you would the IDE, something Rob or Rich has made or jump in and change it for them. Do: try to be constructive in criticism, review things with them at the same time that they&rsquo;re doing them.</li>
 <li>Don&rsquo;t give them a task and then leave them on their own to do it. Do: walk through everything they need help with, face to face, for at least a few months. (yes Months).</li>
